--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
         {% if site.github.is_project_page %}
         <p class="copyright">{{ site.title | default: site.github.repository_name }} maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
-        <p>DLI Travel Questions - <statcan.mad-traveldli-dam-voyageidd.statcan@canada.ca></p>
+        <p>DLI Travel Questions - <a href="mailto:statcan.mad-traveldli-dam-voyageidd.statcan@canada.ca"></p>
       </footer>
     </div>
 
