--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
           {% endif %}
 
           <h1 id="project_title">{{ site.title | default: DLI Ontario }}</h1>
-          <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
+          <h2 id="project_tagline">{{ site.description | default: DLI Ontario }}</h2>
 
           {% if site.show_downloads %}
             <section id="downloads">
