--- a/assests/css/style.scss
+++ b/assests/css/style.scss
@@ -39,7 +39,7 @@
     }
 }
 #navigation #navbar .navbar-nav li a {
-    color: #b2bbbd !important;
+    color: #333838 !important;
 }
 #navigation #navbar .navbar-nav li a:hover,
 #navigation #navbar .navbar-nav li a:focus {
