--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,45 +19,24 @@
             <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
           {% endif %}
 
-          <h1 id="project_title">DLI Ontario</h1>
-          {% if site.show_downloads %}
-            <section id="downloads">
-              <a class="zip_download_link" href="{{ site.github.zip_url }}">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="{{ site.github.tar_url }}">Download this project as a tar.gz file</a>
-            </section>
-          {% endif %}
-          <nav id="navbar" class="collapse navbar-collapse">
-    <ul class="nav navbar-nav">
-        {% assign links = site.data.navigation %}
-        {% for link in links %}
-            {% assign class = nil %}
-            {% if page.url contains link.url %}
-                {% assign class = 'active' %}
-            {% endif %}
-            {% if link.sublinks %}
-                <li class="dropdown {{ class }}">
-                    <a href="{{ site.url }}{{ site.baseurl }}{{ link.url }}" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ link.title }} <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        {% for sublink in link.sublinks %}
-                            {% if sublink.title == 'separator' %}
-                                <li role="separator" class="divider"></li>
-                            {% else %}
-                                <li>
-                                    <a href="{{ site.url }}{{ site.baseurl }}{{ sublink.url }}">{{ sublink.title }}</a>
-                                </li>
-                            {% endif %}
-                        {% endfor %}
-                    </ul>
-                </li>
-            {% else %}
-                <li class="{{ class }}">
-                    <a href="{{ site.url }}{{ site.baseurl }}{{ link.url }}">{{ link.title }}</a>
-                </li>
-            {% endif %}
-        {% endfor %}
-    </ul>
-</nav>
-        </header>
+          <h1 id="site-title">DLI Ontario</h1>
+          <nav class="main-nav">
+    <a href="#" class="opener show-on-mobiles">...</a>
+    <div class="clear-opener show-on-mobiles"></div>
+    <div class="grid">
+      <ul>
+        <li><a href="/"><i class="fa fa-home"></i>Home</a></li>
+        	<!-- <li><a href="/schedule"><i class="fa fa-graduation-cap"></i>Schedule</a></li> -->
+		<!-- <li><a href="/register"><i class="fa fa-user-plus"></i>Register</a></li> -->
+	        <!-- <li><a href="/local-arrangements"><i class="fa fa-hotel"></i>Local Arrangements</a></li> -->
+		<li><a href="/contact"><i class="fa fa-envelope-o"></i>Contact</a></li>
+	        <li><a href="/feedback"><i class="fa fa-comment"></i>Feedback</a></li>
+	        <li><a href="/previous"><i class="fa fa-clock-o"></i>Previous Workshops</a></li>
+	      	<li><a href="/resources"><i class="fa fa-link"></i>Links & Resources</a></li>
+      </ul>
+    </div>
+  </nav>
+    </header>
     </div>
 
     <!-- MAIN CONTENT -->
