--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
             <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
           {% endif %}
 
-          <h1 id="site-title">DLI Ontario</h1>
+          <h1 id="project_title">DLI Ontario</h1>
 
     </header>
     </div>
