--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,24 +1,16 @@
-<nav>
-  <ul>
-    {% for nav in site.data.nav %}
-      {% if nav.subcategories != null %}
-        <li>
-          <a href="{{ site.url }}{{ nav.url }}">{{ nav.title }} ▼</a>
-          <ul>
-          {% for subcategory in nav.subcategories %}
-            <li><a href="{{ site.url }}{{ subcategory.subhref }}">{{ subcategory.subtitle }}</a></li>
-          {% endfor %}
-          </ul>
-        </li>
-      {% elsif nav.title == page.title %}
-         <li class="active">
-           <a href="{{ nav.url }}">{{ nav.title }}</a>
-         </li>
-      {% else %} 
-        <li>
-          <a href="{{ site.url }}{{ nav.href }}">{{ nav.title }}</a>
-        </li>
-      {% endif %}
+<ul class="menu">
+
+    {% for item in site.data.menu %}
+    {% if item.subcategories != null %}
+    <li><a href="{{ item.href }}" class="page-link">{{ item.title }}</a>
+    <ul class="sub-menu">
+    {% for subcategory in item.subcategories %}
+    <li><a href="{{ subcategory.subhref }}">{{ subcategory.subtitle }}</a></li>
     {% endfor %}
-  </ul>
-</nav> 
+    </ul>
+    {% else %}
+     <li><a href="{{ item.href }}" class="page-link">{{ item.title }}</a>
+    {% endif %}
+    </li>
+    {% endfor %}
+    </ul>
