--- a/_archive/_layouts/page.html
+++ b/_archive/_layouts/page.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div class="container">
+<div class="post">
 
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
