--- a/assets/scss/_config.scss
+++ b/assets/scss/_config.scss
@@ -25,7 +25,7 @@ $grey:   #aaa;
 $black:  #111;
 
 // Color variables
-$primary-color: seagreen;
+$primary-color: #334f5e;
 $secondary-color: #233E5B;
 $tertiary-color: #aaa;
 $link-color: $primary-color;
