lost the pages somehow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,7 @@
+/*THIS IS THE PRIMARY STYLE SHEET*/
+
 /*! normalize.css v6.0.0 | MIT License | github.com/necolas/normalize.css */@import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,800);
-	@import url(https://fonts.googleapis.com/css?family=PT+Serif:400,700,400italic,700italic);
+	@import url(https://fonts.googleapis.com/css?family=Montserrat:400,500i,700);
 	html {
 	line-height:1.15;
 	-ms-text-size-adjust:100%;
@@ -11,7 +13,7 @@ article,aside,footer,header,nav,section {
 	}
 
 h1 {
-	font-size:2em;
+	font-size:1em;
 	margin:.67em 0
 	}
 
@@ -193,13 +195,13 @@ body .intro {
 	}
 
 .h1,h1 {
-	font-size:2em;
+	font-size:1em;
 	line-height:1.25
 	}
 
 @media (min-width:43.75em) {
 	.h1,h1 {
-	font-size:2.5em;
+	font-size:1em;
 	line-height:1.125
 	}
 
@@ -208,7 +210,7 @@ body .intro {
 
 @media (min-width:56.25em) {
 	.h1,h1 {
-	font-size:3em;
+	font-size:1.5em;
 	line-height:1.05
 	}
 
@@ -568,7 +570,7 @@ html {
 	}
 
 body {
-	font-family:PT Serif,Georgia,Times,serif;
+	font-family:'Montserrat', sans-serif;
 	line-height:1.75;
 	font-size:112.5%;
 	color:#111;
