--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -3,7 +3,7 @@
 
 // Import fonts from Google
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,800);
-@import url(https://fonts.googleapis.com/css?family=PT+Serif:400,700,400italic,700italic);
+@import url(https://fonts.googleapis.com/css?family=Montserrat:400,500i,700);
 
 // Site configuration
 @import "config"; 
