--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
  *    IE on Windows Phone and in iOS.
  */
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,800);
-@import url(https://fonts.googleapis.com/css?family=PT+Serif:400,700,400italic,700italic);
+@import url(https://fonts.googleapis.com/css?family=Montserrat:400,500i,700);
 html {
   line-height: 1.15;
   /* 1 */
@@ -34,7 +34,7 @@ section {
  * `article` contexts in Chrome, Firefox, and Safari.
  */
 h1 {
-  font-size: 2em;
+  font-size: 1em;
   margin: 0.67em 0; }
 
 /* Grouping content
@@ -405,17 +405,17 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
   font-family: "Open Sans", Helvetica, Arial, sans-serif; }
 
 h1, .h1 {
-  font-size: 2em;
+  font-size: 1em;
   line-height: 1.25; }
 
 @media (min-width: 43.75em) {
   h1, .h1 {
-    font-size: 2.5em;
+    font-size: 1em;
     line-height: 1.125; } }
 
 @media (min-width: 56.25em) {
   h1, .h1 {
-    font-size: 3em;
+    font-size: 1em;
     line-height: 1.05; } }
 
 h2, .h2 {
@@ -710,7 +710,7 @@ html {
   box-sizing: inherit; }
 
 body {
-  font-family: "PT Serif", Georgia, Times, serif;
+  font-family: 'Montserrat', sans-serif;
   line-height: 1.75;
   font-size: 112.5%;
   color: #111;
