--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,11 @@
  <div class="header">
      <div class="container">
-         <h1 class="logo"><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
+         <h1 class="logo"><a href="{{ site.baseurl }}/">{{ site.title }} 2019   Training</a></h1>
          
          <nav class="nav-collapse">
              <ul class="noList">
            
             {% include nav.html  %}
-         </nav> 
+         </nav>
      </div>
  </div><!-- end .header -->
