finished up with content and links. now trying to correct mobile text sizing

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
  <div class="header">
      <div class="container">
-         <h1 class="logo"><a href="{{ site.baseurl }}/">{{ site.title }} 2019   Training</a></h1>
+         <h1 class="logo"><a href="{{ site.baseurl }}/">{{ site.title }} 2019</a></h1>
          
          <nav class="nav-collapse">
              <ul class="noList">
